[tool.poetry]
name = "filedrukte-craeybeckxlaan"
version = "0.1.0"
description = "Take screenshot from google maps live trafic layer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
playwright = "^1.38.0"
ipykernel = "^6.25.2"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.1"
toml = "^0.10.2"
pandas = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
